[metadata]
name = Sanga
version = 0.0.1.dev2
author = Yu-Lun Chiang
author_email = chiangyulun0914@gmail.com
description = Sanga is a news crawler for Taiwan media.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenyummy/Sanga.git
download_url = 
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Natural Language :: Chinese (Traditional)

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tqdm == 4.61.2
    requests == 2.26.0
    beautifulsoup4 == 4.9.3
    lxml == 4.6.3

[options.packages.find]
where = src
exclude = 
    tests

[options.extras_require]
dev =
    pre-commit == 2.13
    flake8 == 3.9.2
    black == 21.6b0
    isort == 5.8.0
test =
    pytest == 6.2.3
    pytest-mock == 3.5.1
    pytest-cov == 2.11.1
